<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="20dp"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/title"
        android:textSize="25sp"
        android:textColor="@color/teal_700"
        android:text="@string/sua_loai_chi"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:enabled="false"
        android:id="@+id/edtTenCu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/ten_loai_thu_dang_su_dung"
        android:paddingLeft="10dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edtTenMoi"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:paddingLeft="10dp"
        android:hint="@string/nhap_ten_loai_thu_moi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:weightSum="2"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnHuy"
            android:text="@string/huy"
            android:layout_weight="1"
            android:layout_marginHorizontal="20dp"
            android:layout_width="0dp"
            android:layout_height="40dp"/>
        <Button
            android:id="@+id/btnSua"
            android:text="@string/sua"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="40dp"/>
    </LinearLayout>


</LinearLayout>