<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:paddingVertical="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/khoa_chi"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:gravity="center|left"
                        android:paddingLeft="10dp"
                        android:text="TÊN : "
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tvTenKhoanChi"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|left"
                        android:paddingLeft="10dp"
                        android:text="@string/app_name"
                        android:textColor="#353535"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:gravity="center|left"
                        android:paddingLeft="10dp"
                        android:text="SỐ TIỀN : "
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tvSoTienChi"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|left"
                        android:paddingLeft="10dp"
                        android:text="@string/app_name"
                        android:textColor="#353535"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:gravity="center|left"
                        android:paddingLeft="10dp"
                        android:text="THỜI GIAN: "
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tvTimeChi"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|left"
                        android:paddingLeft="10dp"
                        android:text="@string/app_name"
                        android:textColor="#353535"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:gravity="center|left"
                        android:paddingLeft="10dp"
                        android:text="@string/loai_chi"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tvLoaiChi"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|left"
                        android:paddingLeft="10dp"
                        android:text="@string/app_name"
                        android:textColor="#353535"
                        android:textSize="14sp" />
                </LinearLayout>


            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp">

                <ImageView
                    android:id="@+id/item_imvEdit"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/edit" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp">

                <ImageView
                    android:id="@+id/item_imvDelete"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/delete" />
            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>